docs/7.52/md/abenst_flow_control.md
---
title: "ST - Flow Control"
description: |
  -   tt:serialize, tt:deserialize, Transformation Direction(https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenst_tt_serialize_deserialize.htm) -   tt:skip, Skip Elements(https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenst_tt_skip.htm) -   tt:cond, Conditional Transform
version: "7.52"
category: "general"
type: "abap-reference"
sourceUrl: "https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenst_flow_control.htm"
abapFile: "abenst_flow_control.htm"
keywords: ["do", "case", "data", "abenst", "flow", "control"]
---

* * *

SAP NetWeaver AS ABAP Release 752, ©Copyright 2017 SAP AG. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap.htm) →  [ABAP - Reference](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_reference.htm) →  [Data Interfaces and Communication Interfaces](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_data_communication.htm) →  [ABAP and XML](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_xml.htm) →  [Transformations for XML](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_xml_trafos.htm) →  [ST - Simple Transformations](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_st.htm) →  [ST - Serialization and Deserialization](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenst_serial_deserial.htm) → 

ST - Flow Control

-   [tt:serialize, tt:deserialize, Transformation Direction](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenst_tt_serialize_deserialize.htm)

-   [tt:skip, Skip Elements](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenst_tt_skip.htm)

-   [tt:cond, Conditional Transformations](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenst_tt_cond.htm)

-   [tt:switch, Case Distinction](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenst_tt_switch.htm)

-   [tt:group, Grouping](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenst_tt_group.htm)

-   [Process Control with Variables](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenst_cond_switch_var.htm)

Continue
[ST - tt:serialize, tt:deserialize, Transformation](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenst_tt_serialize_deserialize.htm)
[ST - tt:skip, Skip Elements](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenst_tt_skip.htm)
[ST - tt:cond, Conditional Transformations](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenst_tt_cond.htm)
[ST - tt:switch, Case Distinction](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenst_tt_switch.htm)
[ST - tt:group, Grouping](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenst_tt_group.htm)
[ST - Flow Control with Variables](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenst_cond_switch_var.htm)