docs/7.57/md/abenst_flow_control.md
---
title: "ST - Flow Control"
description: |
  -   tt:serialize, tt:deserialize, Transformation Direction(https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenst_tt_serialize_deserialize.htm) -   tt:skip, Skip Elements(https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenst_tt_skip.htm) -   tt:cond, Conditional Transform
version: "7.57"
category: "general"
type: "abap-reference"
sourceUrl: "https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenst_flow_control.htm"
abapFile: "abenst_flow_control.htm"
keywords: ["do", "if", "case", "data", "abenst", "flow", "control"]
---

* * *

AS ABAP Release 757, ©Copyright 2023 SAP SE. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap.htm) →  [ABAP - Programming Language](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_reference.htm) →  [Data Interfaces and Communication Interfaces](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_data_communication.htm) →  [ABAP and XML](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_xml.htm) →  [XML - Transformations](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_xml_trafos.htm) →  [Simple Transformations (ST)](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_st.htm) →  [ST - Serialization and Deserialization](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenst_serial_deserial.htm) → 

 [![](Mail.gif?object=Mail.gif&sap-language=EN "Feedback mail for displayed topic") Mail Feedback](mailto:f1_help@sap.com?subject=Feedback on ABAP Documentation&body=Document: ST - Flow Control, ABENST_FLOW_CONTROL, 757%0D%0A%0D%0AError:%0D%0A%0D%0A%0D%0A%0D%0A
Suggestion for improvement:)

ST - Flow Control

-   [tt:serialize, tt:deserialize, Transformation Direction](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenst_tt_serialize_deserialize.htm)
-   [tt:skip, Skip Elements](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenst_tt_skip.htm)
-   [tt:cond, Conditional Transformations](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenst_tt_cond.htm)
-   [tt:switch, Case Distinction](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenst_tt_switch.htm)
-   [tt:group, Grouping](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenst_tt_group.htm)
-   [Process Control with Variables](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenst_cond_switch_var.htm)

Continue
[ST - tt:serialize, tt:deserialize, Transformation Direction](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenst_tt_serialize_deserialize.htm)
[ST - tt:skip, Skip Elements](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenst_tt_skip.htm)
[ST - tt:cond, Conditional Transformations](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenst_tt_cond.htm)
[ST - tt:switch, Case Distinction](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenst_tt_switch.htm)
[ST - tt:group, Grouping](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenst_tt_group.htm)
[ST - Flow Control with Variables](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenst_cond_switch_var.htm)